<resources>
    <string name="app_name">Мои фильмы</string>

    <string name="search_hint">Введите название</string>

    <string name="main_title">Что будете смотреть\nсегодня?</string>
    <string name="recommended">Рекомендуем</string>
    <string name="popular">Популярные</string>
    <string name="upcoming">Новинки</string>
    <string name="topRated">Высокий рейтинг</string>

    <string name="home">Главная</string>

    <string name="more">Ещё…</string>
    <string name="tv_shows">Сериалы</string>
    <string name="profile">Профиль</string>
    <string name="search">Поиск</string>
    <string name="later">44\n Буду смотреть</string>

    <string name="tv_show">Телесериалы</string>
    <string name="close">закрыть</string>

    <string-array name="tab_titles">
        <item>23\n Понравилось</item>
        <item>@string/later</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder">Пёс Киноман</string>

    <!--new fields-->
    <string name="defaultTvShowName">Темный рыцарь</string>
    <string name="defaultTextAboutMovie">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="defaultActorName">Джейсон Стэтхем</string>
    <string name="defaultMovieName">Aquamen</string>
    <string name="titleStudioMovieName">Название</string>
    <string name="defaultMovieStudio">Студия</string>
    <string name="titletMovieJenre">Жанр</string>
    <string name="defaultMovieJenreoName">Action</string>
    <string name="titletYearOfMovie">Год</string>
    <string name="defaultYearOfMovie">2016</string>
    <string name="btnWatchTitle">Смотреть</string>
</resources>
