<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.movie_details.MovieDetailsFragment"
    android:background="@color/blueDark"
    >
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/mainFeedBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <FrameLayout
        android:id="@+id/frPoster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_poster_movie"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:shapeAppearance="@style/CornerSizeOfBottom5Percent"
            app:srcCompat="@drawable/auamenposter" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image_poster_movie" />
    </FrameLayout>
    <TextView
        android:id="@+id/tvNameOfMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/defaultMovieName"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/frPoster"
       />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frPoster"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:button="@drawable/ic_like"
        android:text="new checkbox"
        tools:text="" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnWatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNameOfMovie"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/btnWatchTitle"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/tvMovieRating"
        style="@style/Base.Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNameOfMovie"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="end"
        android:isIndicator="true"
        android:numStars="5"
        android:progressBackgroundTint="@color/colorControlNormal"
        android:stepSize="0.5"
        tools:rating="4" />

    <TextView
        android:id="@+id/tvAboutMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnWatch"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/defaultTextAboutMovie"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvActorsOfTheMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAboutMovie"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_actor" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleStudioMovieName"
        android:layout_marginEnd="15dp"
        android:textColor="@color/white"
        android:layout_below="@id/rvActorsOfTheMovie"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titletMovieJenre"
        android:layout_marginEnd="15dp"
        android:textColor="@color/white"
        android:layout_below="@id/textView2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"/>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titletYearOfMovie"
        android:layout_marginEnd="15dp"
        android:textColor="@color/white"
        android:layout_below="@id/textView3"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"/>

    <TextView
        android:id="@+id/tvStudioName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rvActorsOfTheMovie"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/textView2"
        android:text="@string/defaultMovieName"
        android:textColor="@color/white"
        android:layout_marginStart="12dp"/>
    <TextView
        android:id="@+id/tvGenreName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/defaultMovieJenreoName"
        android:layout_toEndOf="@id/textView2"
        android:layout_below="@id/tvStudioName"
        android:layout_marginStart="12dp"
        android:layout_marginTop="7dp"/>
    <TextView
        android:id="@+id/tvYearMovieMade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/defaultYearOfMovie"
        android:layout_toEndOf="@id/textView2"
        android:layout_below="@id/tvGenreName"
        android:layout_marginStart="12dp"
        android:layout_marginTop="7dp"/>
</RelativeLayout>